--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,10 @@
 comment_width = 100
+max_width = 90
 imports_granularity = "Crate"
 newline_style = "Unix"
 use_small_heuristics = "Max"
 wrap_comments = true
+single_line_if_else_max_width = 80
+format_macro_bodies = true
+format_macro_matchers = true
+unstable_features = true
